// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<NoteEditor /> should render properly 1`] = `
<DocumentFragment>
  <div
    class="noteEditor "
  >
    <div
      class="leftField"
    />
    <input
      type="text"
    />
    <div
      class="rightField"
    />
  </div>
</DocumentFragment>
`;

exports[`<NoteEditor /> when className specified should render properly 1`] = `
<DocumentFragment>
  <div
    class="noteEditor extraClass"
  >
    <div
      class="leftField"
    />
    <input
      type="text"
    />
    <div
      class="rightField"
    />
  </div>
</DocumentFragment>
`;
